lab1-testsuite-larger/lab1-test-dir/ParCPP.y
-- This Happy file was machine-generated by the BNF converter
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
module ParCPP where
import AbsCPP
import LexCPP
import ErrM

}

%name pProgram Program
%name pListDef ListDef
%name pDef Def
%name pInFun InFun
%name pFun Fun
%name pFunBod FunBod
%name pTypeDef TypeDef
%name pStructDef StructDef
%name pArg Arg
%name pListArg ListArg
%name pDecVar DecVar
%name pListDecVar ListDecVar
%name pListUIdent ListUIdent
%name pBType BType
%name pType Type
%name pListType ListType
%name pValue Value
%name pValString ValString
%name pListValString ListValString
%name pQConst QConst
%name pTInstanciation TInstanciation
%name pStm Stm
%name pListStm ListStm
%name pExp16 Exp16
%name pExp15 Exp15
%name pExp14 Exp14
%name pExp13 Exp13
%name pExp12 Exp12
%name pExp11 Exp11
%name pExp10 Exp10
%name pExp9 Exp9
%name pExp8 Exp8
%name pExp4 Exp4
%name pExp3 Exp3
%name pExp2 Exp2
%name pExp1 Exp1
%name pExp Exp
%name pExp5 Exp5
%name pExp6 Exp6
%name pExp7 Exp7
%name pListExp ListExp
-- no lexer declaration
%monad { Err } { thenM } { returnM }
%tokentype {Token}
%token
  '!' { PT _ (TS _ 1) }
  '!=' { PT _ (TS _ 2) }
  '%' { PT _ (TS _ 3) }
  '&' { PT _ (TS _ 4) }
  '&&' { PT _ (TS _ 5) }
  '(' { PT _ (TS _ 6) }
  ')' { PT _ (TS _ 7) }
  '*' { PT _ (TS _ 8) }
  '+' { PT _ (TS _ 9) }
  '++' { PT _ (TS _ 10) }
  '+=' { PT _ (TS _ 11) }
  ',' { PT _ (TS _ 12) }
  '-' { PT _ (TS _ 13) }
  '--' { PT _ (TS _ 14) }
  '-=' { PT _ (TS _ 15) }
  '->' { PT _ (TS _ 16) }
  '.' { PT _ (TS _ 17) }
  '/' { PT _ (TS _ 18) }
  ':' { PT _ (TS _ 19) }
  '::' { PT _ (TS _ 20) }
  ';' { PT _ (TS _ 21) }
  '<' { PT _ (TS _ 22) }
  '<<' { PT _ (TS _ 23) }
  '<=' { PT _ (TS _ 24) }
  '=' { PT _ (TS _ 25) }
  '==' { PT _ (TS _ 26) }
  '>' { PT _ (TS _ 27) }
  '>=' { PT _ (TS _ 28) }
  '>>' { PT _ (TS _ 29) }
  '?' { PT _ (TS _ 30) }
  '[' { PT _ (TS _ 31) }
  ']' { PT _ (TS _ 32) }
  'bool' { PT _ (TS _ 33) }
  'const' { PT _ (TS _ 34) }
  'do' { PT _ (TS _ 35) }
  'double' { PT _ (TS _ 36) }
  'else' { PT _ (TS _ 37) }
  'for' { PT _ (TS _ 38) }
  'if' { PT _ (TS _ 39) }
  'inline' { PT _ (TS _ 40) }
  'int' { PT _ (TS _ 41) }
  'return' { PT _ (TS _ 42) }
  'struct' { PT _ (TS _ 43) }
  'throw' { PT _ (TS _ 44) }
  'typedef' { PT _ (TS _ 45) }
  'using' { PT _ (TS _ 46) }
  'void' { PT _ (TS _ 47) }
  'while' { PT _ (TS _ 48) }
  '{' { PT _ (TS _ 49) }
  '||' { PT _ (TS _ 50) }
  '}' { PT _ (TS _ 51) }

L_integ  { PT _ (TI $$) }
L_doubl  { PT _ (TD $$) }
L_charac { PT _ (TC $$) }
L_quoted { PT _ (TL $$) }
L_UIdent { PT _ (T_UIdent $$) }


%%

Integer :: { Integer } : L_integ  { (read ( $1)) :: Integer }
Double  :: { Double }  : L_doubl  { (read ( $1)) :: Double }
Char    :: { Char }    : L_charac { (read ( $1)) :: Char }
String  :: { String }  : L_quoted {  $1 }
UIdent    :: { UIdent} : L_UIdent { UIdent ($1)}

Program :: { Program }
Program : ListDef { AbsCPP.PDefs (reverse $1) }
ListDef :: { [Def] }
ListDef : {- empty -} { [] } | ListDef Def { flip (:) $1 $2 }
Def :: { Def }
Def : Fun { AbsCPP.DFun $1 }
    | InFun { AbsCPP.DIFun $1 }
    | TypeDef { AbsCPP.DTypeDef $1 }
    | StructDef { AbsCPP.DStructDef $1 }
    | 'using' QConst ';' { AbsCPP.DUsing $2 }
    | DecVar ';' { AbsCPP.DDecVar $1 }
InFun :: { InFun }
InFun : 'inline' Fun { AbsCPP.InlineFunction $2 }
Fun :: { Fun }
Fun : Type UIdent '(' ListArg ')' FunBod { AbsCPP.FuctionHead $1 $2 $4 $6 }
FunBod :: { FunBod }
FunBod : ';' { AbsCPP.FunctionBody }
       | '{' ListStm '}' { AbsCPP.FunctionBodyStm (reverse $2) }
TypeDef :: { TypeDef }
TypeDef : 'typedef' Type UIdent ';' { AbsCPP.TypeDef $2 $3 }
StructDef :: { StructDef }
StructDef : 'struct' UIdent '{' ListDecVar '}' ';' { AbsCPP.StructDef $2 (reverse $4) }
Arg :: { Arg }
Arg : Type { AbsCPP.ArgIdLess $1 }
    | Type UIdent { AbsCPP.ArgDecVar $1 $2 }
    | Type UIdent '=' Exp { AbsCPP.ArgDecVarDefault $1 $2 $4 }
ListArg :: { [Arg] }
ListArg : {- empty -} { [] }
        | Arg { (:[]) $1 }
        | Arg ',' ListArg { (:) $1 $3 }
DecVar :: { DecVar }
DecVar : Type ListUIdent { AbsCPP.DecVar $1 $2 }
       | Type UIdent '=' Exp { AbsCPP.DecVarDefault $1 $2 $4 }
ListDecVar :: { [DecVar] }
ListDecVar : {- empty -} { [] }
           | ListDecVar DecVar ';' { flip (:) $1 $2 }
ListUIdent :: { [UIdent] }
ListUIdent : UIdent { (:[]) $1 }
           | UIdent ',' ListUIdent { (:) $1 $3 }
BType :: { BType }
BType : QConst { AbsCPP.TQConst $1 }
      | 'int' { AbsCPP.TInt }
      | 'double' { AbsCPP.TDouble }
      | 'bool' { AbsCPP.TBool }
      | 'void' { AbsCPP.TVoid }
Type :: { Type }
Type : BType { AbsCPP.TType $1 }
     | 'const' BType { AbsCPP.TConst $2 }
     | 'const' BType '&' { AbsCPP.TConstRef $2 }
     | BType '&' { AbsCPP.TRef $1 }
ListType :: { [Type] }
ListType : Type { (:[]) $1 } | Type ',' ListType { (:) $1 $3 }
Value :: { Value }
Value : Integer { AbsCPP.VInt $1 }
      | Double { AbsCPP.VDouble $1 }
      | Char { AbsCPP.VChar $1 }
      | ListValString { AbsCPP.ValConcatString $1 }
ValString :: { ValString }
ValString : String { AbsCPP.ValSingleString $1 }
ListValString :: { [ValString] }
ListValString : ValString { (:[]) $1 }
              | ValString ListValString { (:) $1 $2 }
QConst :: { QConst }
QConst : QConst '::' QConst { AbsCPP.QConstRec $1 $3 }
       | UIdent { AbsCPP.QConstBase $1 }
       | TInstanciation { AbsCPP.QConstTemplateBase $1 }
TInstanciation :: { TInstanciation }
TInstanciation : UIdent '<' ListType '>' { AbsCPP.Template $1 $3 }
Stm :: { Stm }
Stm : DecVar ';' { AbsCPP.StmDec $1 }
    | Exp ';' { AbsCPP.StmExp $1 }
    | 'return' Exp ';' { AbsCPP.StmRet $2 }
    | 'while' '(' Exp ')' Stm { AbsCPP.StmWhile $3 $5 }
    | 'do' Stm 'while' '(' Exp ')' ';' { AbsCPP.StmDo $2 $5 }
    | 'for' '(' DecVar ';' Exp ';' Exp ')' Stm { AbsCPP.StmFor $3 $5 $7 $9 }
    | '{' ListStm '}' { AbsCPP.StmBlock (reverse $2) }
    | 'if' '(' Exp ')' Stm { AbsCPP.StmIf $3 $5 }
    | 'if' '(' Exp ')' Stm 'else' Stm { AbsCPP.StmIfElse $3 $5 $7 }
    | TypeDef { AbsCPP.StmTypeDef $1 }
    | StructDef { AbsCPP.StmStructDef $1 }
ListStm :: { [Stm] }
ListStm : {- empty -} { [] } | ListStm Stm { flip (:) $1 $2 }
Exp16 :: { Exp }
Exp16 : Value { AbsCPP.ExValue $1 } | '(' Exp ')' { $2 }
Exp15 :: { Exp }
Exp15 : Exp15 '[' Exp ']' { AbsCPP.ExIndex $1 $3 }
      | Exp15 '(' ListExp ')' { AbsCPP.ExCall $1 $3 }
      | QConst { AbsCPP.ExQConst $1 }
      | Exp16 { $1 }
Exp14 :: { Exp }
Exp14 : Exp14 '.' Exp15 { AbsCPP.ExProjPoint $1 $3 }
      | Exp14 '->' Exp15 { AbsCPP.ExProjArrow $1 $3 }
      | Exp15 '++' { AbsCPP.ExPostInc $1 }
      | Exp15 '--' { AbsCPP.ExPostDec $1 }
      | '*' Exp15 { AbsCPP.ExDeref $2 }
      | Exp15 { $1 }
Exp13 :: { Exp }
Exp13 : '++' Exp14 { AbsCPP.ExPreInc $2 }
      | '--' Exp14 { AbsCPP.ExPreDec $2 }
      | '!' Exp14 { AbsCPP.ExNot $2 }
      | Exp14 { $1 }
Exp12 :: { Exp }
Exp12 : Exp12 '*' Exp13 { AbsCPP.ExMult $1 $3 }
      | Exp12 '/' Exp13 { AbsCPP.ExDiv $1 $3 }
      | Exp12 '%' Exp13 { AbsCPP.ExMod $1 $3 }
      | Exp13 { $1 }
Exp11 :: { Exp }
Exp11 : Exp11 '+' Exp12 { AbsCPP.ExAdd $1 $3 }
      | Exp11 '-' Exp12 { AbsCPP.ExSub $1 $3 }
      | Exp12 { $1 }
Exp10 :: { Exp }
Exp10 : Exp10 '<<' Exp11 { AbsCPP.ExLeftShft $1 $3 }
      | Exp10 '>>' Exp11 { AbsCPP.ExRightSft $1 $3 }
      | Exp11 { $1 }
Exp9 :: { Exp }
Exp9 : Exp9 '<' Exp10 { AbsCPP.ExLess $1 $3 }
     | Exp9 '>' Exp10 { AbsCPP.ExGreater $1 $3 }
     | Exp9 '<=' Exp10 { AbsCPP.ExLessEq $1 $3 }
     | Exp9 '>=' Exp10 { AbsCPP.ExGreaterEq $1 $3 }
     | Exp10 { $1 }
Exp8 :: { Exp }
Exp8 : Exp8 '==' Exp9 { AbsCPP.ExEqual $1 $3 }
     | Exp8 '!=' Exp9 { AbsCPP.ExInequal $1 $3 }
     | Exp9 { $1 }
Exp4 :: { Exp }
Exp4 : Exp4 '&&' Exp5 { AbsCPP.ExConjunc $1 $3 } | Exp5 { $1 }
Exp3 :: { Exp }
Exp3 : Exp3 '||' Exp4 { AbsCPP.ExDisjunc $1 $3 } | Exp4 { $1 }
Exp2 :: { Exp }
Exp2 : Exp2 '=' Exp3 { AbsCPP.ExAssign $1 $3 }
     | Exp2 '+=' Exp3 { AbsCPP.ExAddAssign $1 $3 }
     | Exp2 '-=' Exp3 { AbsCPP.ExSubAssign $1 $3 }
     | Exp2 '?' Exp2 ':' Exp2 { AbsCPP.ExCond $1 $3 $5 }
     | Exp3 { $1 }
Exp1 :: { Exp }
Exp1 : 'throw' Exp { AbsCPP.ExThrow $2 } | Exp2 { $1 }
Exp :: { Exp }
Exp : Exp1 { $1 }
Exp5 :: { Exp }
Exp5 : Exp6 { $1 }
Exp6 :: { Exp }
Exp6 : Exp7 { $1 }
Exp7 :: { Exp }
Exp7 : Exp8 { $1 }
ListExp :: { [Exp] }
ListExp : {- empty -} { [] }
        | Exp { (:[]) $1 }
        | Exp ',' ListExp { (:) $1 $3 }
{

returnM :: a -> Err a
returnM = return

thenM :: Err a -> (a -> Err b) -> Err b
thenM = (>>=)

happyError :: [Token] -> Err a
happyError ts =
  Bad $ "syntax error at " ++ tokenPos ts ++ 
  case ts of
    [] -> []
    [Err _] -> " due to lexer error"
    _ -> " before " ++ unwords (map (id . prToken) (take 4 ts))

myLexer = tokens
}
