lab1-testsuite-larger/lab1-test-dir/ParCPP.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParCPP.y
-----------------------------------------------------------------------------

state 47 contains 1 shift/reduce conflicts.
state 258 contains 1 shift/reduce conflicts.
state 279 contains 4 shift/reduce conflicts.
state 282 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListDef -> ListDef                         (1)
	%start_pDef -> Def                                 (2)
	%start_pInFun -> InFun                             (3)
	%start_pFun -> Fun                                 (4)
	%start_pFunBod -> FunBod                           (5)
	%start_pTypeDef -> TypeDef                         (6)
	%start_pStructDef -> StructDef                     (7)
	%start_pArg -> Arg                                 (8)
	%start_pListArg -> ListArg                         (9)
	%start_pDecVar -> DecVar                           (10)
	%start_pListDecVar -> ListDecVar                   (11)
	%start_pListUIdent -> ListUIdent                   (12)
	%start_pBType -> BType                             (13)
	%start_pType -> Type                               (14)
	%start_pListType -> ListType                       (15)
	%start_pValue -> Value                             (16)
	%start_pValString -> ValString                     (17)
	%start_pListValString -> ListValString             (18)
	%start_pQConst -> QConst                           (19)
	%start_pTInstanciation -> TInstanciation           (20)
	%start_pStm -> Stm                                 (21)
	%start_pListStm -> ListStm                         (22)
	%start_pExp16 -> Exp16                             (23)
	%start_pExp15 -> Exp15                             (24)
	%start_pExp14 -> Exp14                             (25)
	%start_pExp13 -> Exp13                             (26)
	%start_pExp12 -> Exp12                             (27)
	%start_pExp11 -> Exp11                             (28)
	%start_pExp10 -> Exp10                             (29)
	%start_pExp9 -> Exp9                               (30)
	%start_pExp8 -> Exp8                               (31)
	%start_pExp4 -> Exp4                               (32)
	%start_pExp3 -> Exp3                               (33)
	%start_pExp2 -> Exp2                               (34)
	%start_pExp1 -> Exp1                               (35)
	%start_pExp -> Exp                                 (36)
	%start_pExp5 -> Exp5                               (37)
	%start_pExp6 -> Exp6                               (38)
	%start_pExp7 -> Exp7                               (39)
	%start_pListExp -> ListExp                         (40)
	Integer -> L_integ                                 (41)
	Double -> L_doubl                                  (42)
	Char -> L_charac                                   (43)
	String -> L_quoted                                 (44)
	UIdent -> L_UIdent                                 (45)
	Program -> ListDef                                 (46)
	ListDef ->                                         (47)
	ListDef -> ListDef Def                             (48)
	Def -> Fun                                         (49)
	Def -> InFun                                       (50)
	Def -> TypeDef                                     (51)
	Def -> StructDef                                   (52)
	Def -> 'using' QConst ';'                          (53)
	Def -> DecVar ';'                                  (54)
	InFun -> 'inline' Fun                              (55)
	Fun -> Type UIdent '(' ListArg ')' FunBod          (56)
	FunBod -> ';'                                      (57)
	FunBod -> '{' ListStm '}'                          (58)
	TypeDef -> 'typedef' Type UIdent ';'               (59)
	StructDef -> 'struct' UIdent '{' ListDecVar '}' ';'   (60)
	Arg -> Type                                        (61)
	Arg -> Type UIdent                                 (62)
	Arg -> Type UIdent '=' Exp                         (63)
	ListArg ->                                         (64)
	ListArg -> Arg                                     (65)
	ListArg -> Arg ',' ListArg                         (66)
	DecVar -> Type ListUIdent                          (67)
	DecVar -> Type UIdent '=' Exp                      (68)
	ListDecVar ->                                      (69)
	ListDecVar -> ListDecVar DecVar ';'                (70)
	ListUIdent -> UIdent                               (71)
	ListUIdent -> UIdent ',' ListUIdent                (72)
	BType -> QConst                                    (73)
	BType -> 'int'                                     (74)
	BType -> 'double'                                  (75)
	BType -> 'bool'                                    (76)
	BType -> 'void'                                    (77)
	Type -> BType                                      (78)
	Type -> 'const' BType                              (79)
	Type -> 'const' BType '&'                          (80)
	Type -> BType '&'                                  (81)
	ListType -> Type                                   (82)
	ListType -> Type ',' ListType                      (83)
	Value -> Integer                                   (84)
	Value -> Double                                    (85)
	Value -> Char                                      (86)
	Value -> ListValString                             (87)
	ValString -> String                                (88)
	ListValString -> ValString                         (89)
	ListValString -> ValString ListValString           (90)
	QConst -> QConst '::' QConst                       (91)
	QConst -> UIdent                                   (92)
	QConst -> TInstanciation                           (93)
	TInstanciation -> UIdent '<' ListType '>'          (94)
	Stm -> DecVar ';'                                  (95)
	Stm -> Exp ';'                                     (96)
	Stm -> 'return' Exp ';'                            (97)
	Stm -> 'while' '(' Exp ')' Stm                     (98)
	Stm -> 'do' Stm 'while' '(' Exp ')' ';'            (99)
	Stm -> 'for' '(' DecVar ';' Exp ';' Exp ')' Stm    (100)
	Stm -> '{' ListStm '}'                             (101)
	Stm -> 'if' '(' Exp ')' Stm                        (102)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (103)
	Stm -> TypeDef                                     (104)
	Stm -> StructDef                                   (105)
	ListStm ->                                         (106)
	ListStm -> ListStm Stm                             (107)
	Exp16 -> Value                                     (108)
	Exp16 -> '(' Exp ')'                               (109)
	Exp15 -> Exp15 '[' Exp ']'                         (110)
	Exp15 -> Exp15 '(' ListExp ')'                     (111)
	Exp15 -> QConst                                    (112)
	Exp15 -> Exp16                                     (113)
	Exp14 -> Exp14 '.' Exp15                           (114)
	Exp14 -> Exp14 '->' Exp15                          (115)
	Exp14 -> Exp15 '++'                                (116)
	Exp14 -> Exp15 '--'                                (117)
	Exp14 -> '*' Exp15                                 (118)
	Exp14 -> Exp15                                     (119)
	Exp13 -> '++' Exp14                                (120)
	Exp13 -> '--' Exp14                                (121)
	Exp13 -> '!' Exp14                                 (122)
	Exp13 -> Exp14                                     (123)
	Exp12 -> Exp12 '*' Exp13                           (124)
	Exp12 -> Exp12 '/' Exp13                           (125)
	Exp12 -> Exp12 '%' Exp13                           (126)
	Exp12 -> Exp13                                     (127)
	Exp11 -> Exp11 '+' Exp12                           (128)
	Exp11 -> Exp11 '-' Exp12                           (129)
	Exp11 -> Exp12                                     (130)
	Exp10 -> Exp10 '<<' Exp11                          (131)
	Exp10 -> Exp10 '>>' Exp11                          (132)
	Exp10 -> Exp11                                     (133)
	Exp9 -> Exp9 '<' Exp10                             (134)
	Exp9 -> Exp9 '>' Exp10                             (135)
	Exp9 -> Exp9 '<=' Exp10                            (136)
	Exp9 -> Exp9 '>=' Exp10                            (137)
	Exp9 -> Exp10                                      (138)
	Exp8 -> Exp8 '==' Exp9                             (139)
	Exp8 -> Exp8 '!=' Exp9                             (140)
	Exp8 -> Exp9                                       (141)
	Exp4 -> Exp4 '&&' Exp5                             (142)
	Exp4 -> Exp5                                       (143)
	Exp3 -> Exp3 '||' Exp4                             (144)
	Exp3 -> Exp4                                       (145)
	Exp2 -> Exp2 '=' Exp3                              (146)
	Exp2 -> Exp2 '+=' Exp3                             (147)
	Exp2 -> Exp2 '-=' Exp3                             (148)
	Exp2 -> Exp2 '?' Exp2 ':' Exp2                     (149)
	Exp2 -> Exp3                                       (150)
	Exp1 -> 'throw' Exp                                (151)
	Exp1 -> Exp2                                       (152)
	Exp -> Exp1                                        (153)
	Exp5 -> Exp6                                       (154)
	Exp6 -> Exp7                                       (155)
	Exp7 -> Exp8                                       (156)
	ListExp ->                                         (157)
	ListExp -> Exp                                     (158)
	ListExp -> Exp ',' ListExp                         (159)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	'+='           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'->'           { PT _ (TS _ 16) }
	'.'            { PT _ (TS _ 17) }
	'/'            { PT _ (TS _ 18) }
	':'            { PT _ (TS _ 19) }
	'::'           { PT _ (TS _ 20) }
	';'            { PT _ (TS _ 21) }
	'<'            { PT _ (TS _ 22) }
	'<<'           { PT _ (TS _ 23) }
	'<='           { PT _ (TS _ 24) }
	'='            { PT _ (TS _ 25) }
	'=='           { PT _ (TS _ 26) }
	'>'            { PT _ (TS _ 27) }
	'>='           { PT _ (TS _ 28) }
	'>>'           { PT _ (TS _ 29) }
	'?'            { PT _ (TS _ 30) }
	'['            { PT _ (TS _ 31) }
	']'            { PT _ (TS _ 32) }
	'bool'         { PT _ (TS _ 33) }
	'const'        { PT _ (TS _ 34) }
	'do'           { PT _ (TS _ 35) }
	'double'       { PT _ (TS _ 36) }
	'else'         { PT _ (TS _ 37) }
	'for'          { PT _ (TS _ 38) }
	'if'           { PT _ (TS _ 39) }
	'inline'       { PT _ (TS _ 40) }
	'int'          { PT _ (TS _ 41) }
	'return'       { PT _ (TS _ 42) }
	'struct'       { PT _ (TS _ 43) }
	'throw'        { PT _ (TS _ 44) }
	'typedef'      { PT _ (TS _ 45) }
	'using'        { PT _ (TS _ 46) }
	'void'         { PT _ (TS _ 47) }
	'while'        { PT _ (TS _ 48) }
	'{'            { PT _ (TS _ 49) }
	'||'           { PT _ (TS _ 50) }
	'}'            { PT _ (TS _ 51) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_charac       { PT _ (TC $$) }
	L_quoted       { PT _ (TL $$) }
	L_UIdent       { PT _ (T_UIdent $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListDef rule  1
	%start_pDef     rule  2
	%start_pInFun   rule  3
	%start_pFun     rule  4
	%start_pFunBod  rule  5
	%start_pTypeDef rule  6
	%start_pStructDef rule  7
	%start_pArg     rule  8
	%start_pListArg rule  9
	%start_pDecVar  rule  10
	%start_pListDecVar rule  11
	%start_pListUIdent rule  12
	%start_pBType   rule  13
	%start_pType    rule  14
	%start_pListType rule  15
	%start_pValue   rule  16
	%start_pValString rule  17
	%start_pListValString rule  18
	%start_pQConst  rule  19
	%start_pTInstanciation rule  20
	%start_pStm     rule  21
	%start_pListStm rule  22
	%start_pExp16   rule  23
	%start_pExp15   rule  24
	%start_pExp14   rule  25
	%start_pExp13   rule  26
	%start_pExp12   rule  27
	%start_pExp11   rule  28
	%start_pExp10   rule  29
	%start_pExp9    rule  30
	%start_pExp8    rule  31
	%start_pExp4    rule  32
	%start_pExp3    rule  33
	%start_pExp2    rule  34
	%start_pExp1    rule  35
	%start_pExp     rule  36
	%start_pExp5    rule  37
	%start_pExp6    rule  38
	%start_pExp7    rule  39
	%start_pListExp rule  40
	Integer         rule  41
	Double          rule  42
	Char            rule  43
	String          rule  44
	UIdent          rule  45
	Program         rule  46
	ListDef         rules 47, 48
	Def             rules 49, 50, 51, 52, 53, 54
	InFun           rule  55
	Fun             rule  56
	FunBod          rules 57, 58
	TypeDef         rule  59
	StructDef       rule  60
	Arg             rules 61, 62, 63
	ListArg         rules 64, 65, 66
	DecVar          rules 67, 68
	ListDecVar      rules 69, 70
	ListUIdent      rules 71, 72
	BType           rules 73, 74, 75, 76, 77
	Type            rules 78, 79, 80, 81
	ListType        rules 82, 83
	Value           rules 84, 85, 86, 87
	ValString       rule  88
	ListValString   rules 89, 90
	QConst          rules 91, 92, 93
	TInstanciation  rule  94
	Stm             rules 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105
	ListStm         rules 106, 107
	Exp16           rules 108, 109
	Exp15           rules 110, 111, 112, 113
	Exp14           rules 114, 115, 116, 117, 118, 119
	Exp13           rules 120, 121, 122, 123
	Exp12           rules 124, 125, 126, 127
	Exp11           rules 128, 129, 130
	Exp10           rules 131, 132, 133
	Exp9            rules 134, 135, 136, 137, 138
	Exp8            rules 139, 140, 141
	Exp4            rules 142, 143
	Exp3            rules 144, 145
	Exp2            rules 146, 147, 148, 149, 150
	Exp1            rules 151, 152
	Exp             rule  153
	Exp5            rule  154
	Exp6            rule  155
	Exp7            rule  156
	ListExp         rules 157, 158, 159

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 47
	'const'        reduce using rule 47
	'double'       reduce using rule 47
	'inline'       reduce using rule 47
	'int'          reduce using rule 47
	'struct'       reduce using rule 47
	'typedef'      reduce using rule 47
	'using'        reduce using rule 47
	'void'         reduce using rule 47
	L_UIdent       reduce using rule 47
	%eof           reduce using rule 47

	Program        goto state 157
	ListDef        goto state 158

State 1


	'bool'         reduce using rule 47
	'const'        reduce using rule 47
	'double'       reduce using rule 47
	'inline'       reduce using rule 47
	'int'          reduce using rule 47
	'struct'       reduce using rule 47
	'typedef'      reduce using rule 47
	'using'        reduce using rule 47
	'void'         reduce using rule 47
	L_UIdent       reduce using rule 47
	%eof           reduce using rule 47

	ListDef        goto state 156

State 2


	'bool'         shift, and enter state 107
	'const'        shift, and enter state 108
	'double'       shift, and enter state 110
	'inline'       shift, and enter state 147
	'int'          shift, and enter state 113
	'struct'       shift, and enter state 115
	'typedef'      shift, and enter state 116
	'using'        shift, and enter state 155
	'void'         shift, and enter state 117
	L_UIdent       shift, and enter state 80

	UIdent         goto state 47
	Def            goto state 148
	InFun          goto state 149
	Fun            goto state 150
	TypeDef        goto state 151
	StructDef      goto state 152
	DecVar         goto state 153
	BType          goto state 102
	Type           goto state 154
	QConst         goto state 128
	TInstanciation goto state 52

State 3


	'inline'       shift, and enter state 147

	InFun          goto state 146

State 4


	'bool'         shift, and enter state 107
	'const'        shift, and enter state 108
	'double'       shift, and enter state 110
	'int'          shift, and enter state 113
	'void'         shift, and enter state 117
	L_UIdent       shift, and enter state 80

	UIdent         goto state 47
	Fun            goto state 144
	BType          goto state 102
	Type           goto state 145
	QConst         goto state 128
	TInstanciation goto state 52

State 5


	';'            shift, and enter state 142
	'{'            shift, and enter state 143

	FunBod         goto state 141

State 6


	'typedef'      shift, and enter state 116

	TypeDef        goto state 140

State 7


	'struct'       shift, and enter state 115

	StructDef      goto state 139

State 8


	'bool'         shift, and enter state 107
	'const'        shift, and enter state 108
	'double'       shift, and enter state 110
	'int'          shift, and enter state 113
	'void'         shift, and enter state 117
	L_UIdent       shift, and enter state 80

	UIdent         goto state 47
	Arg            goto state 138
	BType          goto state 102
	Type           goto state 137
	QConst         goto state 128
	TInstanciation goto state 52

State 9


	'bool'         shift, and enter state 107
	'const'        shift, and enter state 108
	'double'       shift, and enter state 110
	'int'          shift, and enter state 113
	'void'         shift, and enter state 117
	L_UIdent       shift, and enter state 80
	%eof           reduce using rule 64

	UIdent         goto state 47
	Arg            goto state 135
	ListArg        goto state 136
	BType          goto state 102
	Type           goto state 137
	QConst         goto state 128
	TInstanciation goto state 52

State 10


	'bool'         shift, and enter state 107
	'const'        shift, and enter state 108
	'double'       shift, and enter state 110
	'int'          shift, and enter state 113
	'void'         shift, and enter state 117
	L_UIdent       shift, and enter state 80

	UIdent         goto state 47
	DecVar         goto state 134
	BType          goto state 102
	Type           goto state 103
	QConst         goto state 128
	TInstanciation goto state 52

State 11


	'bool'         reduce using rule 69
	'const'        reduce using rule 69
	'double'       reduce using rule 69
	'int'          reduce using rule 69
	'void'         reduce using rule 69
	L_UIdent       reduce using rule 69
	%eof           reduce using rule 69

	ListDecVar     goto state 133

State 12


	L_UIdent       shift, and enter state 80

	UIdent         goto state 131
	ListUIdent     goto state 132

State 13


	'bool'         shift, and enter state 107
	'double'       shift, and enter state 110
	'int'          shift, and enter state 113
	'void'         shift, and enter state 117
	L_UIdent       shift, and enter state 80

	UIdent         goto state 47
	BType          goto state 130
	QConst         goto state 128
	TInstanciation goto state 52

State 14


	'bool'         shift, and enter state 107
	'const'        shift, and enter state 108
	'double'       shift, and enter state 110
	'int'          shift, and enter state 113
	'void'         shift, and enter state 117
	L_UIdent       shift, and enter state 80

	UIdent         goto state 47
	BType          goto state 102
	Type           goto state 129
	QConst         goto state 128
	TInstanciation goto state 52

State 15


	'bool'         shift, and enter state 107
	'const'        shift, and enter state 108
	'double'       shift, and enter state 110
	'int'          shift, and enter state 113
	'void'         shift, and enter state 117
	L_UIdent       shift, and enter state 80

	UIdent         goto state 47
	BType          goto state 102
	Type           goto state 126
	ListType       goto state 127
	QConst         goto state 128
	TInstanciation goto state 52

State 16


	L_integ        shift, and enter state 42
	L_doubl        shift, and enter state 77
	L_charac       shift, and enter state 78
	L_quoted       shift, and enter state 79

	Integer        goto state 43
	Double         goto state 44
	Char           goto state 45
	String         goto state 46
	Value          goto state 125
	ValString      goto state 49
	ListValString  goto state 50

State 17


	L_quoted       shift, and enter state 79

	String         goto state 46
	ValString      goto state 124

State 18


	L_quoted       shift, and enter state 79

	String         goto state 46
	ValString      goto state 49
	ListValString  goto state 123

State 19


	L_UIdent       shift, and enter state 80

	UIdent         goto state 47
	QConst         goto state 122
	TInstanciation goto state 52

State 20


	L_UIdent       shift, and enter state 80

	UIdent         goto state 120
	TInstanciation goto state 121

State 21


	'!'            shift, and enter state 71
	'('            shift, and enter state 72
	'*'            shift, and enter state 73
	'++'           shift, and enter state 74
	'--'           shift, and enter state 75
	'bool'         shift, and enter state 107
	'const'        shift, and enter state 108
	'do'           shift, and enter state 109
	'double'       shift, and enter state 110
	'for'          shift, and enter state 111
	'if'           shift, and enter state 112
	'int'          shift, and enter state 113
	'return'       shift, and enter state 114
	'struct'       shift, and enter state 115
	'throw'        shift, and enter state 76
	'typedef'      shift, and enter state 116
	'void'         shift, and enter state 117
	'while'        shift, and enter state 118
	'{'            shift, and enter state 119
	L_integ        shift, and enter state 42
	L_doubl        shift, and enter state 77
	L_charac       shift, and enter state 78
	L_quoted       shift, and enter state 79
	L_UIdent       shift, and enter state 80

	Integer        goto state 43
	Double         goto state 44
	Char           goto state 45
	String         goto state 46
	UIdent         goto state 47
	TypeDef        goto state 99
	StructDef      goto state 100
	DecVar         goto state 101
	BType          goto state 102
	Type           goto state 103
	Value          goto state 48
	ValString      goto state 49
	ListValString  goto state 50
	QConst         goto state 104
	TInstanciation goto state 52
	Stm            goto state 105
	Exp16          goto state 53
	Exp15          goto state 54
	Exp14          goto state 55
	Exp13          goto state 56
	Exp12          goto state 57
	Exp11          goto state 58
	Exp10          goto state 59
	Exp9           goto state 60
	Exp8           goto state 61
	Exp4           goto state 62
	Exp3           goto state 63
	Exp2           goto state 64
	Exp1           goto state 65
	Exp            goto state 106
	Exp5           goto state 67
	Exp6           goto state 68
	Exp7           goto state 69

State 22

